spacing between boxes corrected

--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
  padding-left: 10px;
  width: 90%;
  margin-left: 5%;
+ margin-bottom: 10px;
 }
 
  .label, 
@@ -26,7 +27,7 @@ body {
   float: right;
   padding-right: 10px;
  }
- 
+
  .photo,
  {
   float: right;
